--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "eslint": "^8.41.0",
     "express": "^4.18.2",
     "express-generator": "^4.2.0",
     "puppeteer": "^20.2.0"
