--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
-    "eslint": "^8.41.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-generator": "^4.2.0",
     "puppeteer": "^20.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0"
   }
 }
